--- a/index.html
+++ b/index.html
@@ -4,31 +4,52 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Weather Dashboard</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
   <link rel="stylesheet" href="./assets/style.css" />
+
 </head>
 
 <body>
+  <!-- heading -->
+  <h2 class="heading container text-center p-3 mb-2 bg-secondary text-white">Weather Dashboard</h2>
+  <div class="container">
+    <div class="row">
+      <div class="search-hist bg-light text-dark col-4">
+        <!-- search bar -->
+        <div class="search">
+          <p>Search for a city:</p>
+          <input id="cityInput" type="text" placeholder="Waxahachie...">
+          <button id="btnSubmit" class="btn btn-primary" type="submit" value="Submit"><i
+              class="fas fa-search"></i></button>
 
-  <h2 class="heading">Weather Dashboard</h2>
-  <div row-12>
-    <div col-4>
-
-    </div>
-    <div col-8>
-      <div row-12>
-
+        </div>
+        <div id="hist" class="history card col-4" style="width: 18rem;">
+          <!-- a list of previously searched items created dynamically -->
+          <ul class="list-group list-group-flush">
+            <!-- list items go here -->
+          </ul>
+        </div>
       </div>
-      <div row-12>
+      <div id="forecast" class="card col-8">
+        <div id="wxNowHead" class="card-header col-12">
+          <h4 id="wxHeading"></h4>
+          <!-- dynamically created header for forecast information - current -->
+        </div>
+        <div id="wxNow" class="card-body col-12">
+          <!-- dynamically created forecast information - current -->
+        </div>
+        <div id="5DayForecast" class="col-12">
+          <h4>5-Day Forecast:</h4>
+          <!-- dynamically created cards for forecast information - future -->
 
+        </div>
       </div>
     </div>
   </div>
-
-
-
+  <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   <script src="assets/script.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" />
 </body>
 
 </html>
