added more enhancements

--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
               class="fas fa-search"></i></button>
 
         </div>
-        <div id="hist" class="history card col-3">
-          <!-- a list of previously searched items created dynamically -->
-          <ul id="historyList" class="list-group list-group-flush" style="width: 16rem;">
-            <!-- list items go here -->
-          </ul>
-        </div>
+        <!-- a list of previously searched items created dynamically -->
+        <ul id="historyList" class="list-group histList">
+          <!-- list items go here -->
+        </ul>
       </div>
       <div id="forecast" class="card col-9">
         <div id="wxNowHead" class="card-header col-12">
