--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         </div>
         <!-- a list of previously searched items created dynamically -->
-        <ul id="historyList" class="list-group histList">
+        <ul id="historyList" class="histList list-group histList">
           <!-- list items go here -->
         </ul>
       </div>
